--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aja": "^0.4.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2"
   },
