Got routing working

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "aja": "^0.4.1",
+    "history": "^1.13.1",
     "react": "^0.14.2",
-    "react-dom": "^0.14.2"
+    "react-dom": "^0.14.2",
+    "react-router": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.1.20",
