--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "history": "^1.13.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
-    "react-router": "^1.0.0"
+    "react-router": "^1.0.0",
+    "semantic-ui-css": "^2.1.6"
   },
   "devDependencies": {
     "babel-core": "^6.1.20",
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "css-loader": "^0.23.0",
+    "file-loader": "^0.8.4",
     "raw-loader": "^0.5.1",
     "react-loader": "^2.0.0",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.4",
     "webpack-dev-server": "^1.12.1"
   }
